<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="100"
    tools:context=".view.PastItemActivity">

    <TextView
        android:id="@+id/tv_past_shopping_date"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginVertical="10dp"
        android:background="@drawable/bg_shopping_list_title"
        android:layout_weight="8"
        android:gravity="center"
        android:textSize="25sp"
        android:textStyle="bold"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="10dp"
        android:layout_weight="7"
        android:gravity="center_horizontal"
        android:text="@string/title_past_shopping_item_list"
        android:textSize="22sp" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="70">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_today_item_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="3dp"
            android:layout_marginVertical="3dp"
            android:scrollbars="vertical"/>

        <TextView
            android:id="@+id/tv_not_yet_past_shopping"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/message_not_yet_memo"
            android:textSize="15sp"
            android:visibility="gone" />
    </FrameLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="5dp"
        android:layout_gravity="center"
        android:layout_weight="15">

        <Button
            android:id="@+id/btn_back"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="15dp"
            android:layout_marginVertical="15dp"
            android:layout_weight="1"
            android:background="@drawable/system_button_design_selector"
            android:stateListAnimator="@drawable/system_button_anim_selector"
            android:text="@string/btn_back"
            android:textColor="@color/system_text_color_selector"
            android:textStyle="bold"
            android:typeface="sans"/>

        <Button
            android:id="@+id/btn_top"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="15dp"
            android:layout_marginVertical="15dp"
            android:layout_weight="1"
            android:background="@drawable/system_button_design_selector"
            android:stateListAnimator="@drawable/system_button_anim_selector"
            android:text="@string/btn_top"
            android:textColor="@color/system_text_color_selector"
            android:textStyle="bold"
            android:typeface="sans"/>

    </LinearLayout>

</LinearLayout>