<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="100"
    tools:context=".view.PastListActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="30dp"
        android:layout_marginVertical="10dp"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/bg_past_date_title_line"
        android:paddingTop="15dp"
        android:layout_weight="10"
        android:gravity="center_vertical"
        android:text="@string/title_past_shopping_history_list"
        android:textSize="22sp" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="75"
        android:paddingTop="65dp"
        android:paddingBottom="60dp"
        android:paddingHorizontal="40dp"
        android:background="@drawable/bg_past_date_2">

        <ListView
            android:id="@+id/lv_past_history_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="3dp"
            android:layout_marginVertical="3dp"
            android:scrollbars="vertical"
            android:divider="@null"/>

        <TextView
            android:id="@+id/tv_not_yet_shopping"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/message_not_yet_shopping"
            android:textSize="15sp"
            android:visibility="gone" />
    </FrameLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="5dp"
        android:layout_gravity="center"
        android:layout_weight="15">

        <Button
            android:id="@+id/btn_back"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="15dp"
            android:layout_marginVertical="15dp"
            android:background="@drawable/system_button_design_selector"
            android:stateListAnimator="@drawable/system_button_anim_selector"
            android:text="@string/btn_back"
            android:textColor="@color/system_text_color_selector"
            android:textStyle="bold"
            android:typeface="sans"/>

    </LinearLayout>

</LinearLayout>