<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/top_backgraoud"
    tools:context=".view.MainTopActivity">

    <FrameLayout
        android:id="@+id/fl_top_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginVertical="20dp"
        android:layout_marginHorizontal="20dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <Button
                android:id="@+id/btn_top_start"
                android:layout_width="300dp"
                android:layout_height="70dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toTopOf="@+id/btn_top_today_item"
                android:layout_marginBottom="80dp"
                android:background="@drawable/system_button_design_selector"
                android:stateListAnimator="@drawable/system_button_anim_selector"
                android:text="@string/btn_start_memo"
                android:textColor="@color/system_text_color_selector"
                android:textStyle="bold"
                android:typeface="sans"/>

            <Button
                android:id="@+id/btn_top_today_item"
                android:layout_width="250dp"
                android:layout_height="50dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toTopOf="@+id/btn_top_past_item"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginBottom="25dp"
                android:background="@drawable/system_button_design_selector"
                android:stateListAnimator="@drawable/system_button_anim_selector"
                android:text="@string/btn_today_item"
                android:textColor="@color/system_text_color_selector"
                android:textStyle="bold"
                android:typeface="sans"/>

            <Button
                android:id="@+id/btn_top_past_item"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="65dp"
                android:background="@drawable/system_button_design_selector"
                android:stateListAnimator="@drawable/system_button_anim_selector"
                android:text="@string/btn_past_list"
                android:textColor="@color/system_text_color_selector"
                android:textStyle="bold"
                android:typeface="sans"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>

            <ImageButton
                android:id="@+id/btn_help"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="end"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginRight="3dp"
                android:layout_marginBottom="3dp"
                android:src="@drawable/ic_help_150px"
                android:background="#ffffff"
                android:scaleType="fitXY"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </FrameLayout>

    <FrameLayout
        android:id="@+id/fl_help_info"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:elevation="10dp"
        android:padding="20dp"
        android:layout_marginVertical="20dp"
        android:layout_marginHorizontal="20dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>